Important bug fixes
 - GUI: Fixed bug where player can place more than card in a turn
 - GUI: Fixed bug where placing or drawing cards wouldn't update the rendered cards
 - View: Fixed bug where update draw area would be called invalid values when decks were empty
 - View: Fixed bug where play area wouldn't be updated after setting each player hand

 - Created a single method for new player turn broadcast (with and without state change)
 - Changed message for first player turn, to show to every player the updated draw area